--- a/src/pages/Fiches/Fiche.scss
+++ b/src/pages/Fiches/Fiche.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
   }
+  
 }
 .collapse-fiche {
   width: 85%;
@@ -21,6 +22,6 @@
   margin-right: auto;
   justify-content: space-between;
   .undefined {
-    width: 35%;
+    width: 47%;
   }
 }
